miniextendr-macros/tests/ui/module_invalid_item.stderr
error: expected one of: `mod`, `use`, `struct`, `impl`, `fn`, `extern`, identifier
 --> tests/ui/module_invalid_item.rs:7:5
  |
7 |     let x = 5;  // Invalid: only fn, struct, impl, use allowed
  |     ^^^
